tester/testsuite/extensions/objects1/bad/cyclic.jl
class Bunny extends Rabbit {

}

class Rabbit extends Bunny {

}

int main() {
    return 0;
}